<resources>
    <string name="app_name">GitHub Users</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="joined_on">"Joined on %s"</string>
    <string name="user_avatar">"GitHub user's picture"</string>

    <string name="public_repos">Public Repos</string>
    <string name="public_gists">Public Gists</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="package_uri">package:%s</string>

    <string name="available_for_hire">Available for hire</string>
    <string name="blog">Blog</string>
    <string name="profile">Profile</string>
    <string name="retry">RETRY</string>
    <string name="error_downloading_more_users">Error downloading more users</string>
    <string name="error_downloading_users">Error downloading users</string>
    <string name="error_downloading_users_profile">Error downloading user\'s profile</string>
    <string name="base_font">fonts/heavy_data.ttf</string>
</resources>
