<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:maxWidth="400dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="invisible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".features.userDetails.UserDetailsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/user_repos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/user_gists"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_repos_legend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_repos"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/user_gists"
            app:layout_constraintTop_toBottomOf="@+id/user_repos" />

        <View
            style="@style/vertical_separator"
            app:layout_constraintBottom_toBottomOf="@+id/horizontal_separator"
            app:layout_constraintLeft_toRightOf="@id/user_repos"
            app:layout_constraintRight_toLeftOf="@+id/user_gists"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_gists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/user_repos"
            app:layout_constraintRight_toLeftOf="@+id/user_followers"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_gists"
            app:layout_constraintLeft_toRightOf="@+id/user_repos"
            app:layout_constraintRight_toLeftOf="@+id/user_followers"
            app:layout_constraintTop_toBottomOf="@+id/user_gists" />

        <View
            style="@style/vertical_separator"
            app:layout_constraintBottom_toBottomOf="@+id/horizontal_separator"
            app:layout_constraintLeft_toRightOf="@id/user_gists"
            app:layout_constraintRight_toLeftOf="@+id/user_followers"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_followers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/user_gists"
            app:layout_constraintRight_toLeftOf="@+id/user_following"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            app:layout_constraintLeft_toRightOf="@id/user_gists"
            app:layout_constraintRight_toLeftOf="@+id/user_following"
            app:layout_constraintTop_toBottomOf="@id/user_followers" />

        <View
            style="@style/vertical_separator"
            app:layout_constraintBottom_toBottomOf="@+id/horizontal_separator"
            app:layout_constraintLeft_toRightOf="@id/user_followers"
            app:layout_constraintRight_toLeftOf="@+id/user_following"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/user_followers"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            app:layout_constraintLeft_toRightOf="@+id/user_followers"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_followers" />

        <View
            android:id="@+id/horizontal_separator"
            style="@style/horizontal_separator"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_repos_legend" />

        <TextView
            android:id="@+id/user_bio"
            style="@style/info_item"
            android:drawableStart="@drawable/icon_biography"
            android:textStyle="italic"
            android:visibility="gone"

            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_separator"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/user_company"
            style="@style/info_item"
            android:drawableStart="@drawable/icon_work"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_bio"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/user_location"
            style="@style/info_item"
            android:drawableStart="@drawable/icon_location"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_company"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/user_created_at"
            style="@style/info_item"
            android:drawableStart="@drawable/icon_clock"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_location" />

        <TextView
            android:id="@+id/user_hireable"
            style="@style/info_item"
            android:drawableStart="@drawable/icon_alert"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_created_at"
            tools:visibility="visible" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
